--- a/.github/workflows/codeCoverage.yml
+++ b/.github/workflows/codeCoverage.yml
@@ -23,10 +23,12 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: '3.10'
-      - name: Install dependencies
-        run: python -m pip install build pytest pytest-cov
+      - name: Install dependencies pytest
+        run: python -m pip install build pytest pytest-cov numpy
       # - name: Build and install the autodiff_package in the container
       #   run: (python -m build --)
+      # - name: Install dependencies numpy
+      #   run: python3 -m pip install numpy
       - name: Run tests and generate coverage html
         run: (cd tests && bash run_tests.sh coverage)
 
